...
                  ml="$6"
                  pb="$1"
                  lineHeight={drawerType === "front" ? "$2xl" : undefined}
                  fontFamily="$bodyBold"
                  color="$defaultContent"
                >
                  {drawerType === "permanent" ? "ACCOUNT" : "Account"}
                </Text>
              </HStack>
              <DrawerItemList {...props} />
            </DrawerContentScrollView>
          )}
        >
...
              drawerLabel: ({ focused, color }) => (
                <Text
                  lineHeight={Platform.OS !== "web" ? "$xl" : undefined}
                  fontFamily={focused ? "$bodyBold" : "$body"}
                  color={color}
                >
                  ADDRESSES
                </Text>
              ),
              drawerIcon: ({ color, size }) => (
                <Ionicons name="location-outline" color={color} size={size} />
              ),
              headerShown: false,
...
