...
            </Link>
            {showMenu ? (
              <HStack gap="$2">
                <NavButton onPress={onSearchPress}>
                  <ButtonIcon as={SearchIcon} w={30} size="xl" color="$black" />
                </NavButton>
                <NavButton onPress={onMenuPress} testID="menuIcon">
                  <ButtonIcon as={MenuIcon} w={30} size="xl" color="$black" />
                </NavButton>
              </HStack>
            ) : (
              <HStack gap="$2">
                <Button onPress={onSearchPress} p="$0" bg="$trueGray200">
...
                    px="$5"
                    h={39}
                    py="$2"
                    rounded={12}
                    borderWidth={1}
                    onPress={onSignInPress}
                    label="Sign in"
                    variant="outline"
                    borderColor="$black"
                  />
                ) : (
                  <Menu
                    placement="bottom right"
...
