export const MessageError = {
  invalidEmail: "Please enter a valid email address",
  invalidPw:
    "Password must contain at least 8 characters, including upper case, lower case, numbers, & special characters (!@#$%^&*)",
  passwordMin: "Password must be at least 8 characters long",
  uncaughtError: "There has been an error, please try again",
  wrongCurrentPw: "Current password is incorrect. Please try again",
  exitedCard:
    "You have already saved this credit card information. Please add a different one.",
  notExistPayoutMethod: "Payout method does not exist.",
  notExistAddress: "Address does not exist.",
  notExistCreditCard: "Credit card does not exist.",
};

export const MessageSuccess = {
  signIn: "You have logged in successfully.",
  signUp: "Your account is created successfully.",
  newAddress: "Address was created successfully.",
  changePassword: "Password changed successfully.",
  removeAddress: "Address was removed successfully.",
  removePayment: "Payment method was removed successfully.",
  completeAccount: "Register account successfully",
  newPayment: "New payment was created successfully",
  updateAddress: "Address was updated successfully.",
  addPaymentMethod: "Credit card was added successfully.",
};

export const MessageRequired = {
  requiredField: "This field is required",
  requiredEmail: "Email is required",
  requiredPassword: "Password is required",
  requiredAddress: "Address is required",
  requiredZipCode: "Zip code is required",
  requiredCountry: "Country is required",
  firstName: "First name is required.",
  lastName: "Last name is required.",
  phoneNumber: "Phone number is required.",
  payment: "Payment is required.",
  requiredCity: "City is required",
  requiredState: "State is required",
  minPassword: "Minimum of 8 characters",
  constrainPassword:
    "Combination of uppercase letters, lowercase letters, numbers, and special characters",
};
