...
                leftIcon={<MaterialCommunityIcons name="close" size={25} />}
              />
            </HStack>
            <VStack mx="$9">
              {!isLoggedIn ? (
                <Button
                  label="Sign in"
                  height={38}
                  variant="outline"
                  borderColor="$content"
                  labelProps={{
                    color: "$content",
                    fontSize: "$md",
...
                    width="100%"
                    p="$1.5"
                    borderWidth={1}
                    rounded={12}
                    justifyContent="space-between"
                    alignItems="center"
                    testID="accountSelection"
                  >
                    <Image
                      source={Avatar}
                      alt=""
                      w="$6.5"
                      resizeMode="contain"
...
