...
                    <Link href="/forgot-password">
                      <Text
                        color="$bgMobileEditAccount"
                        fontFamily="$bodyBold"
                        fontSize="$sm"
                      >
                        Forgot Password?
                      </Text>
                    </Link>
                  </HStack>
                )}
                {(Platform.OS !== "web" || margin === "unset") && (
                  <VStack alignItems="center" mt={24}>
...
