...
              fontWeight="bold"
              fontSize="$3xl"
              lineHeight="$3xl"
              pb="-$2"
              fontFamily="$bodyBold"
            >
              Probstein Auctions
            </Text>
          </VStack>
          <Text
            color="$white"
            textAlign="center"
            fontWeight="bold"
...
